right icon list

--- a/Project/CSS Final Project/dashboard.html
+++ b/Project/CSS Final Project/dashboard.html
@@ -117,42 +117,47 @@
 
                 <p class="header-dashboard">Dashboard </p>
             </div>
-            <div>
+            <div id="menu">
                 <span class="material-icons ">menu</span>
+                <div class="menuopacity">Menu</div>
             </div>
         </div>
 
         <header>
             <div class="left-header">
+
                 <span class="material-icons more-vert">more_vert</span>
                 <p class="header-dashboard">Dashboard </p>
+
             </div>
             <div class="search-bar-icon">
                 <div class="right-header">
                     <input type="text" class="search-bar-input" placeholder="Search">
                     <span id="search-bar" class="material-icons more-vert">search</span>
                 </div>
-               <div class="right-icon">
-                <ul>
-                    <li id="dashboard-opacity"><span class="material-icons">dashboard</span> 
-                     <div class="dashboardopacity">Dashboard</div>
-                    </li>
-                    <li id="notification"><span class="material-icons">notifications</span>
-                    <span class="numberofnotification">5</span>
-                    <div class="dropdownmenu">
-                        <p class="dropdown">John Doe send a message</p>
-                        <p class="dropdown">Someone viewed your profile</p>
-                        <p class="dropdown">John Doe send a message</p>
-                        <p class="dropdown">Someone viewed your profile</p>
-                        <p class="dropdown">Another notification</p>
-                    </div>
-                    <div id="notification-opacity"></div> 
-                    <div class="notificationopacity">Notification</div>
-                </li>
-                    <li id="person-opacity"><span class="material-icons">person</span>
-                    <div class="personopacity">Profile</div>
-                    </li>
-                </ul>
+                <div class="right-icon">
+                    <ul>
+
+                        <li id="dashboard-opacity"><span class="material-icons">dashboard</span>
+                            <div class="dashboardopacity">Dashboard</div>
+                        </li>
+                        <li id="notification"><span class="material-icons">notifications</span>
+                            <span class="numberofnotification">5</span>
+                            <div class="dropdownmenu">
+                                <p class="dropdown">John Doe send a message</p>
+                                <p class="dropdown">Someone viewed your profile</p>
+                                <p class="dropdown">John Doe send a message</p>
+                                <p class="dropdown">Someone viewed your profile</p>
+                                <p class="dropdown">Another notification</p>
+                            </div>
+                            <div id="notification-opacity"></div>
+                            <div class="notificationopacity">Notification</div>
+                        </li>
+                        <li id="person-opacity"><span class="material-icons">person</span>
+                            <div class="personopacity">Profile</div>
+                        </li>
+
+                    </ul>
                 </div>
             </div>
         </header>
