edit view delete

--- a/Project/CSS Final Project/dashboard.html
+++ b/Project/CSS Final Project/dashboard.html
@@ -299,99 +299,130 @@
             <p class="listchapter">Manage Listing</p>
             <section class="managelisting">
                 <div class="managelistcontent">
-                    <div class="img-icons">
+                    <div id="img-icons">
                         <div class="contentimages">
                             <img src="images/card-1.jpeg" alt="Montain">
-
-                            <span class="manageicons">
+                        </div>
+                        <div class="manageicons">
+                            <div id="view-opacity">
                                 <span class="material-icons view">visibility</span>
+                                <span class="viewopacity">View</span>
+                            </div>
+                            <div id="edit-opacity">
                                 <span class="material-icons edit">edit</span>
+                                <span class="editopacity">Edit</span>
+                            </div>
+                            <div id="delete-opacity">
                                 <span class="material-icons close">close</span>
-                            </span>
-                        </div>
-                        <p class="cart-1-p">Cozy 5 Stars Apartment</p>
-                        <p class="cart-1-p2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi facere
-                            tempora, necessitatibus quisquam obcaecati ad, assumenda quo ipsa laudantium quasi aut
-                            quaerat voluptates quibusdam ex dolorum labore pariatur maiores. Quam.</p>
-                        <hr>
-                        <div class="cart1footer">
-                            <div>$899/Night</div>
-                            <div class="locationcart1">
-                                <span class="material-icons">location_on</span>
-                                <span>Barcelon,Spain</span>
+                                <span class="deleteopacity">Delete</span>
                             </div>
                         </div>
                     </div>
+                    <p class="cart-1-p">Cozy 5 Stars Apartment</p>
+                    <p class="cart-1-p2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi facere
+                        tempora, necessitatibus quisquam obcaecati ad, assumenda quo ipsa laudantium quasi aut
+                        quaerat voluptates quibusdam ex dolorum labore pariatur maiores. Quam.</p>
+                    <hr>
+                    <div class="cart1footer">
+                        <div>$899/Night</div>
+                        <div class="locationcart1">
+                            <span class="material-icons">location_on</span>
+                            <span>Barcelon,Spain</span>
+                        </div>
+                    </div>
+
                 </div>
 
                 <div class="managelistcontent">
-                    <div class="contentimages">
-                        <img src="images/card-2.jpeg" alt="Montain">
-
-                        <span class="manageicons">
-                            <span class="material-icons view">visibility</span>
-                            <span class="material-icons edit">edit</span>
-                            <span class="material-icons close">close</span>
-                        </span>
-                        <p class="cart-1-p">Cozy 5 Stars Apartment</p>
-                        <p class="cart-1-p2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi facere
-                            tempora, necessitatibus quisquam obcaecati ad, assumenda quo ipsa laudantium quasi aut
-                            quaerat voluptates quibusdam ex dolorum labore pariatur maiores. Quam.</p>
-                        <hr>
-                        <div class="cart1footer">
-                            <div>$1.199/Night</div>
-                            <div class="locationcart1">
-                                <span class="material-icons">location_on</span>
-                                <span>London,UK</span>
+                    <div id="img-icons">
+                        <div class="contentimages">
+                            <img src="images/card-2.jpeg" alt="Montain">
+                        </div>
+                        <div class="manageicons">
+                            <div id="view-opacity">
+                                <span class="material-icons view">visibility</span>
+                                <span class="viewopacity">View</span>
+                            </div>
+                            <div id="edit-opacity">
+                                <span class="material-icons edit">edit</span>
+                                <span class="editopacity">Edit</span>
+                            </div>
+                            <div id="delete-opacity">
+                                <span class="material-icons close">close</span>
+                                <span class="deleteopacity">Delete</span>
                             </div>
                         </div>
                     </div>
+                    <p class="cart-1-p">Cozy 5 Stars Apartment</p>
+                    <p class="cart-1-p2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi facere
+                        tempora, necessitatibus quisquam obcaecati ad, assumenda quo ipsa laudantium quasi aut
+                        quaerat voluptates quibusdam ex dolorum labore pariatur maiores. Quam.</p>
+                    <hr>
+                    <div class="cart1footer">
+                        <div>$1.199/Night</div>
+                        <div class="locationcart1">
+                            <span class="material-icons">location_on</span>
+                            <span>London,UK</span>
+                        </div>
+                    </div>
+
 
 
                 </div>
                 <div class="managelistcontent">
-                    <div class="contentimages">
-                        <img src="images/card-3.jpeg" alt="Montain">
-
-                        <span class="manageicons">
-                            <span class="material-icons view">visibility</span>
-                            <span class="material-icons edit">edit</span>
-                            <span class="material-icons close">close</span>
-                        </span>
-                        <p class="cart-1-p">Cozy 5 Stars Apartment</p>
-                        <p class="cart-1-p2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi facere
-                            tempora, necessitatibus quisquam obcaecati ad, assumenda quo ipsa laudantium quasi aut
-                            quaerat voluptates quibusdam ex dolorum labore pariatur maiores. Quam.</p>
-                        <hr>
-                        <div class="cart1footer">
-                            <div>$459/Night</div>
-                            <div class="locationcart1">
-                                <span class="material-icons">location_on</span>
-                                <span>Milano,Italy</span>
+                    <div id="img-icons">
+                        <div class="contentimages">
+                            <img src="images/card-1.jpeg" alt="Montain">
+                        </div>
+                        <div class="manageicons">
+                            <div id="view-opacity">
+                                <span class="material-icons view">visibility</span>
+                                <span class="viewopacity">View</span>
+                            </div>
+                            <div id="edit-opacity">
+                                <span class="material-icons edit">edit</span>
+                                <span class="editopacity">Edit</span>
+                            </div>
+                            <div id="delete-opacity">
+                                <span class="material-icons close">close</span>
+                                <span class="deleteopacity">Delete</span>
                             </div>
                         </div>
                     </div>
+                    <p class="cart-1-p">Cozy 5 Stars Apartment</p>
+                    <p class="cart-1-p2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi facere
+                        tempora, necessitatibus quisquam obcaecati ad, assumenda quo ipsa laudantium quasi aut
+                        quaerat voluptates quibusdam ex dolorum labore pariatur maiores. Quam.</p>
+                    <hr>
+                    <div class="cart1footer">
+                        <div>$459/Night</div>
+                        <div class="locationcart1">
+                            <span class="material-icons">location_on</span>
+                            <span>Milano,Italy</span>
+                        </div>
+                    </div>
                 </div>
+    </div>
 
-            </section>
+    </section>
 
-        </main>
-        <hr>
-        <footer>
-            <div class="footercontent">
-                <div>
-                    <span class="footerlist">
-                        <a href="HOME">Home</a>
-                        <a href="profile">Company</a>
-                        <a href="adada">Portfolio</a>
-                        <a href="afafaf">Blog</a>
-                    </span>
-                </div>
-                <div>
-                    <span>&copy Dafina Salihu.2023</span>
-                </div>
+    </main>
+    <hr>
+    <footer>
+        <div class="footercontent">
+            <div>
+                <span class="footerlist">
+                    <a href="HOME">Home</a>
+                    <a href="profile">Company</a>
+                    <a href="adada">Portfolio</a>
+                    <a href="afafaf">Blog</a>
+                </span>
             </div>
-        </footer>
+            <div>
+                <span>&copy Dafina Salihu.2023</span>
+            </div>
+        </div>
+    </footer>
 
     </div>
     <div class="main">
