--- a/Assigment/[JAVASCRIPT]/2. Controlling the Flow/vowelsandconsonants.html
+++ b/Assigment/[JAVASCRIPT]/2. Controlling the Flow/vowelsandconsonants.html
@@ -9,7 +9,7 @@
     
     <script>
         document.addEventListener('keypress',(e)=>{
-            let letter=e.key.toLocaleLowerCase;
+            let letter=e.key.toLocaleLowerCase ();
             if(['a','e','i','o','u','y'].includes(letter)){
                 console.log("It's a vowel!");
             }
