--- a/Session/BORINGCALCULATION/boringcalculation.html
+++ b/Session/BORINGCALCULATION/boringcalculation.html
@@ -6,37 +6,55 @@
     <title>Boring Calculator</title>
 </head>
 <body>
+    <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
     <script>
-        let firstNumber = parseFloat('Write the first number:');
-        let secondNumber = parseFloat('Write the second number');
-        let operator = prompt('What opetation do you want to apply').toLocaleLowerCase();
+        let firstNumber = parseFloat(prompt('Write the first number:'));
+        let secondNumber = parseFloat(prompt('Write the second number:'));
+        let operator = prompt('What operation do you want to apply').toLowerCase().trim();
 
-     if(isNaN(firstNumber) || isNaN(secondNumber)){
-        throw new Error('Please write the valid numbers!');
-     }
-     else{
-        let result;
+        if (isNaN(firstNumber) || isNaN(secondNumber)) {
+            throw new Error('Please write a valid numbers!');
+        }
+        else {
+            let result;
 
-        if(operator=='addition'){
-            result= firstNumber + secondNumber;
+            switch (operator) {
+                case 'addition':
+                    result = firstNumber + secondNumber;
+                    break;
+                case 'subtraction':
+                    result = firstNumber - secondNumber;
+                    break;
+                case 'multiplication':
+                    result = firstNumber * secondNumber;
+                    break;
+                case 'division':
+                    if (secondNumber == 0) {
+                        throw new Error('Can\'t divide by zero!');
+                    }
+                    result = firstNumber / secondNumber;
+                    break;
+                case 'modulus':
+                    result = firstNumber % secondNumber;
+                    break;
+                default:
+                    throw new Error('Unknown Operator');
+            }
+
+            console.log('The result is: ' + result);
         }
-        else if(operator =='subtraction'){
-            result= firstNumber - secondNumber;
-        }
-        else if(operator=='multiplication'){
-            result = firstNumber * secondNumber;
-        }
-        else if(operator=='division'){
-            result = firstNumber / secondNumber;
-        }
-        else{
-            throw new Error('Unknown Operator');
-        }
- 
-            console.log(`The result is ${result}`);
-        
-     }
-     
     </script>
+</body>
+
+</html>
 </body>
 </html>
